# cvm-fundos

./: .gitattributes  README.md  analise_v01.html  analise_v01.ipynb  index.html  pyproject.toml
src/: coleta_fundos_cvm.py  git_repo.py  gitignore
src/analise/: analise_v01.ipynb
